--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chainskills",
-  "version": "1.0.0",
+  "name": "ChainList",
+  "version": "0.0.1",
   "description": "",
   "main": "truffle.js",
   "directories": {
@@ -14,6 +14,5 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0"
-  },
-  "dependencies": {}
+  }
 }
